# distributed-inference-platform

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  pyrightconfig.json
audits/: audit1.md  baseline_20260305_075557.json  stress_20260305_075718.json  worker_performance_improvement_20260325.md
audits/benchmarks/: bench_1ef639e9b09e.json  bench_25d45e9eb7b0.json  bench_94eb060b872f.json
audits/benchmarks/worker/: worker_performance_improvement_20260325.md
benchmarks/: README.md  SCHEMA.md  WORKER_OPTIMIZATION_BASELINE.md  __init__.py  cli.py  compare.py  preflight.py  profiles.py  schema.py
benchmarks/schemas/: benchmark_run.schema.json
libs/platform_shared/: README.md  pyproject.toml
libs/platform_shared/src/platform_shared/: __init__.py  config.py  db_base.py  db_utils.py  models.py  schemas.py
libs/platform_shared/src/platform_shared/observability/: __init__.py  logging.py  metrics.py
scripts/: baseline.py  dev-down.ps1  dev-up.ps1  requirements.txt  smoke_api.py  stress.py
services/: __init__.py
services/api/: .gitignore  Dockerfile  README.md  alembic.ini  requirements.txt
services/api/alembic/: env.py
services/api/src/: contracts.py  db.py  main.py  models.py
services/monitoring/: prometheus.yml
services/producer/: Dockerfile  README.md  __init__.py  requirements.txt
services/shared/: .gitignore
services/worker/: .gitignore  Dockerfile  README.md  requirements.txt
services/worker/src/: db.py  (+4 more)
tests/: conftest.py
tests/shared/: test_config_and_metrics_helpers.py  test_schemas_and_contracts.py
(+16 files in other folders)
